# uo-py-sdk

./: .env.example  .gitignore  10  OVERVIEW.md  README.md  pyproject.toml  task_list.md  uo-py-sdk.code-workspace
.github/: copilot-instructions.md
.github/workflows/: Publish-PyPI.yml  PyPi-publish.yml  ci.yml  release-publish.yml  testpypi-publish.yml
src/uo_py_sdk/: __init__.py  errors.py  paths.py  settings.py
src/uo_py_sdk/defs/: __init__.py  parser.py
src/uo_py_sdk/images/: __init__.py  color1555.py
src/uo_py_sdk/mul/: __init__.py  idx.py  pair.py
src/uo_py_sdk/ultima/: __init__.py  animation_codec.py  animations.py  animinfo.py  art.py  art_codec.py  asset_store.py  client.py  cliloc.py  file_index.py  files.py  fonts.py  gump_codec.py  gumps.py  hues.py  lights.py  map.py  map_codec.py  multi_codec.py  multis.py  radarcol.py  skill_groups.py  skills.py  sound_codec.py  sounds.py  speech_list.py  textures.py  textures_codec.py  (+2 more)
tests/: test_animations_smoke.py  test_animinfo_module.py  test_art_codec_roundtrip.py  test_cliloc_module.py  test_def_parser.py  test_file_index_helpers.py  test_fonts_roundtrip.py  test_fonts_smoke.py  test_gump_codec_roundtrip.py  test_hues_roundtrip.py  test_idx_roundtrip.py  test_lights_module.py  test_map_image_export.py  test_map_module.py  test_multis_module.py  test_radarcol_module.py  test_settings_module.py  test_skill_groups_module.py  test_skills_module.py  test_sounds_module.py  test_speech_list_module.py  test_texture_codec_roundtrip.py  test_tiledata_module.py  test_ultima_modules_smoke.py  test_verdata_patch.py
